@@ -5,6 +5,10 @@ Version vNext
 
 	Code Changes:
 
+	Bug fixes:
+		-[Core] The exception message that was thrown in case the delegate of a type could not be compiled, 
+		 incorrectly described the UnregisteredTypeEventArgs.Register method, which was confusing.
+
 
 Version 1.3.1.11358 (v1.3.1 RTM) 2011-12-23
 	General description:
